--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -35,9 +35,9 @@
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
         <td><%#= link_to "upvote", like_form_path(form), method: :put %>
-        <td><%= link_to 'Show', form %></td>
-        <td><%= link_to 'Edit', edit_form_path(form) %></td>
-        <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Show', form %></td>
+        <td><%#= link_to 'Edit', edit_form_path(form) %></td>
+        <td><%#= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
       
