Can add a form from a muni view, and muni prepopulates

--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -34,7 +34,7 @@
   <div class="form-group input-lg">
     <div class="controls">
       <%= f.collection_select(:municipality_id, Municipality.order(:name), :id, :name, {:selected =>
-@form.municipality_id}) %>
+@muni_id}) %>
     </div>
   </div>
 
