--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -54,7 +54,7 @@
           <% end %>
         </td>
         <td><%= form.municipality.name rescue nil %></td>
-        <td><%= form.municipality.state.state %></td>
+        <td><%= form.municipality.state.state rescue nil%></td>
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
         <td><%#= link_to "upvote", like_form_path(form), method: :put %>
