took off the edit/destry links on the views and added counts of the govs and forms to the front page

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -57,10 +57,10 @@
         <td><%= form.municipality.state.state rescue nil%></td>
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
-        <td><%#= link_to "upvote", like_form_path(form), method: :put %>
+        <!-- <td><%#= link_to "upvote", like_form_path(form), method: :put %>
         <td><%#= link_to 'Show', form %></td>
-        <td><%= link_to 'Edit', edit_form_path(form) %></td>
-        <td><%#= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Edit', edit_form_path(form) %></td>
+        <td><%#= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
         <% end %>
 
       </tr> 
