--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= link_to department.department, department_path(department) %></td>
         <% if user_signed_in? %>
-        <td><%= link_to 'Show', department %></td>
-        <td><%= link_to 'Edit', edit_department_path(department) %></td>
-        <td><%#= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%#= link_to 'Show', department %></td> -->
+        <!-- <td><%#= link_to 'Edit', edit_department_path(department) %></td>
+        <td><%#= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
         <% end %>
       </tr>
     <% end %>
