took off the edit/destry links on the views and added counts of the govs and forms to the front page

--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -1,6 +1,6 @@
 <!-- <div class="panel panel-default"> -->
 
-<h2 class="panel-heading">10 recently added forms of <%= @form_count %> forms:</h2>
+<h2 class="panel-heading">Recently added forms of <%= @form_count %> forms:</h2>
 
 <table class="table table-hover">
  
@@ -47,7 +47,7 @@
 
 <br>
 
-<h2 class="panel-heading">10 most recent governments of <%= @gov_count %> governments:</h2>
+<h2 class="panel-heading">Recently joined governments of <%= @gov_count %> governments:</h2>
 
 <table class="table table-hover">
  
