added dept form count

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,8 +1,9 @@
-<h1 class="panel-heading">Department: <%= @department.department %></h1>
+<h1 class="panel-heading"><%= @department.forms.count %> <%= @department.department %> Forms</h1>
 
 <table class="table table-hover">
 <div>
 <thead>
+  
     <tr>
       <th>Form Name</th>
       <th>Municipality</th>
@@ -15,6 +16,7 @@
  
   <tbody>
     <% @department.forms.each do |form| %>
+
       
       <% if form.has_payment == true %>
       <tr class="success">
@@ -27,8 +29,8 @@
             <span class="badge">F</span>
           <% end %>
         </td>
-        <td><%= form.municipality.name %></td>
-        <td><%= form.municipality.state.state %></td>
+        <td><%= form.municipality.name rescue nil%></td>
+        <td><%= form.municipality.state.state rescue nil %></td>
   
         <% if user_signed_in? %>
         <td><%#= link_to "upvote", like_form_path(form), method: :put %>
