--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -29,6 +29,31 @@
   </table>
 </div>
 
+<div class="panel-heading pull-left col-sm-6">
+<h1 class="align-left">Website Provider</h1>
+<table class="table table-hover">
+    <tbody>
+      <% if @website_provider != nil  %>
+        <% @website_provider.each do |website_provider| %>
+            <div style="border: 1px #ccc solid;
+            padding-bottom: 50px;
+            border-radius: 4px;
+            background-color: #fff;">
+            <h3 class="text-center" style="align-content: flex-start" ><%= website_provider %></h3>
+            <br>
+            <% @municipality.each do |municipality| %>
+              <% if municipality.website_provider == website_provider %>
+                <h5 style="padding-left: 50px;"><%= municipality.name %> | <%= municipality.state.state %></h5>
+              <% end %>
+            <% end %>
+          </div>
+          <br>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
 
 <div class="panel-heading col-sm-6 pull right">
 <h1 class="align-right">Form Examples</h1>
